# tr064_upnp

./: .gitignore  Cargo.toml  README.md
api/: igd2ipv6fwcSCPD.rest  igdconnSCPD.rest  igddslSCPD.rest  igdicfgSCPD.rest  soap_api.rest
examples/: api_description.rs  gateway_discovery.rs  service_description.rs  service_overview.rs  simple_service_request.rs
src/: error.rs  gateway.rs  lib.rs  macros.rs  request.rs  request_helper.rs  services.rs
src/gateway/: overview.rs  services.rs
src/gateway/services/: description.rs  wan_common_interface_config.rs
src/request/: esp32.rs  reqwest.rs
src/services/: description.rs  overview.rs  wan_common_interface_config.rs
