[package]
name = "fritz_tr064_upnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []

[dependencies]
async-recursion = "1.0"
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"

[dev-dependencies]
tokio = { version = "1.24", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
