[package]
name = "fritz_tr064_upnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-xml-rs = "0.6"
thiserror = "1.0"
url = "2.3"

[target.'cfg(not(target_os = "espidf"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }

[target.'cfg(target_os = "espidf")'.dependencies]
embedded-svc = "0.24"
esp-idf-svc = { version = "0.45", features = ["experimental"] }
esp-idf-sys = { version = "0.32" }

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
