[package]
name = "fritz_tr064_upnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["reqwest"]
esp32 = ["dep:embedded-svc", "dep:esp-idf-svc", "dep:esp-idf-sys"]
reqwest = ["dep:reqwest"]

[dependencies]
embedded-svc = { version = "0.24", optional = true }
esp-idf-svc = { version = "0.45", features = ["experimental"], optional = true }
esp-idf-sys = { version = "0.32", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-xml-rs = "0.6"
thiserror = "1.0"
url = "2.3"

# [target.xtensa-esp32-espidf.dependencies]
# embedded-svc = "0.24"
# esp-idf-svc = { version = "0.45", features = ["experimental"] }

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
